--- a/firmware/hid-mouse/prj.conf
+++ b/firmware/hid-mouse/prj.conf
@@ -7,6 +7,9 @@ CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
 CONFIG_LOG=y
 CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
 CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_LOG_BACKEND_RTT=y
 
 CONFIG_GPIO=y
 CONFIG_INPUT=y
