--- a/firmware/hid-mouse/prj.conf
+++ b/firmware/hid-mouse/prj.conf
@@ -5,12 +5,18 @@ CONFIG_USB_DEVICE_PID=0x0007
 CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
 
 CONFIG_LOG=y
-CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
-CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 CONFIG_LOG_BACKEND_RTT=y
+CONFIG_USB_DRIVER_LOG_LEVEL_ERR=y
+CONFIG_USB_DEVICE_LOG_LEVEL_ERR=y
+CONFIG_SPI_LOG_LEVEL_INF=y
 
 CONFIG_GPIO=y
+CONFIG_SPI=y
 CONFIG_INPUT=y
 CONFIG_INPUT_MODE_SYNCHRONOUS=y
+CONFIG_INPUT_PMW3610=y
+
+CONFIG_ASSERT=y
+CONFIG_ASSERT_LEVEL=2
