--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+* text=auto
+
 # https://github.com/github-linguist/linguist/blob/main/lib/linguist/languages.yml
 *.kicad_pro linguist-detectable=true
 *.kicad_prl linguist-detectable=true
