--- a/.gitattributes
+++ b/.gitattributes
@@ -1,11 +1,25 @@
-* text=auto
+* text=auto eol=lf
 
+*.ps1 text eol=crlf
+*.bat text eol=crlf
+*.cmd text eol=crlf
+
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.webp binary
+*.bmp binary
+*.wasm binary
+
+# KiCad files
 # https://github.com/github-linguist/linguist/blob/main/lib/linguist/languages.yml
-*.kicad_pro linguist-detectable=true
-*.kicad_prl linguist-detectable=true
-*.kicad_pcb linguist-detectable=true
-*.kicad_sch linguist-detectable=true
-*.kicad_dru linguist-detectable=true
-*.kicad_mod linguist-detectable=true
-*.kicad_sym linguist-detectable=true
-*.kicad_wks linguist-detectable=true
+*.kicad_pro text linguist-detectable=true
+*.kicad_prl text linguist-detectable=true
+*.kicad_pcb text linguist-detectable=true
+*.kicad_sch text linguist-detectable=true
+*.kicad_dru text linguist-detectable=true
+*.kicad_mod text linguist-detectable=true
+*.kicad_sym text linguist-detectable=true
+*.kicad_wks text linguist-detectable=true
